--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "java.project.sourcePaths": ["src"],
   "java.project.outputPath": "bin",
-  "cSpell.words": ["krille"]
+  "cSpell.words": ["krille", "tidigare"]
 }
